tests/snapshots/integration_test__log_data@00beeabeb700254e33d21a5c5d26ca33.snap
---
source: tests/integration_test.rs
expression: record
info: "type=PATH msg=audit(1655465404.819:27091): item=1 name=\"/lib64/ld-linux-aarch64.so.1\" inode=33874 dev=00:30 mode=0100755 ouid=582 ogid=582 rdev=00:00 nametype=NORMAL cap_fp=0 cap_fi=0 cap_fe=0 cap_fver=0 cap_frootid=0"
---
{
  "record_type": "PATH",
  "timestamp": 1655465404819,
  "id": 27091,
  "fields": {
    "cap_fe": "0",
    "cap_fi": [],
    "cap_fp": [],
    "cap_frootid": "0",
    "cap_fver": "0",
    "dev": "00:30",
    "inode": "33874",
    "item": "1",
    "mode": "0100755",
    "name": "/lib64/ld-linux-aarch64.so.1",
    "nametype": "NORMAL",
    "ogid": 582,
    "ouid": 582,
    "rdev": "00:00"
  }
}
