tests/snapshots/integration_test__log_data@00eb21307c3cf6eb3d94fd45b0929136.snap
---
source: tests/integration_test.rs
expression: record
info: "type=PROCTITLE msg=audit(1451781471.394:194435): proctitle=737368643A206275726E205B707269765D"
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194435,
  "fields": {
    "proctitle": "sshd: burn [priv]"
  }
}
