tests/snapshots/integration_test__log_data@0964b1d28cbf97185b0fe1c3a9df9915.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/test.log:3"
expression: result
info: "type=CWD msg=audit(1170021493.977:293):  cwd=\"/var/spool/postfix\""
---
{
  "record_type": "CWD",
  "timestamp": 1170021493977,
  "id": 293,
  "fields": {
    "cwd": "/var/spool/postfix"
  }
}
