tests/snapshots/integration_test__log_data@0a08b870fea236d14505eee046e0d3d9.snap
---
source: tests/integration_test.rs
expression: record
info: "type=SOCKADDR msg=audit(1481078424.953:688): saddr=02000050A9FEA9FE0000000000000000"
---
{
  "record_type": "SOCKADDR",
  "timestamp": 1481078424953,
  "id": 688,
  "fields": {
    "saddr": "169.254.169.254:80"
  }
}
