tests/snapshots/integration_test__log_data@0ab23fcb20c825cbaa580873c1dce30a.snap
---
source: tests/integration_test.rs
expression: record
info: "type=PROCTITLE msg=audit(1451781471.394:194433): proctitle=\"bash\""
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194433,
  "fields": {
    "proctitle": "bash"
  }
}
