tests/snapshots/integration_test__log_data@0dc0cdea3e7fdfc5c1f79fea7c764625.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/synthetic/perm.log:3"
expression: result
info: "type=AVC msg=audit(1524662933.080:61207): perm_mask=1"
---
{
  "record_type": "AVC",
  "timestamp": 1524662933080,
  "id": 61207,
  "fields": {
    "perm_mask": [
      "exec"
    ]
  }
}
