tests/snapshots/integration_test__log_data@0de4555dadeac73f2a3004620f9edc7d.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-path-enriched.log:1"
expression: result
info: "type=PATH msg=audit(1615113648.978:15219): item=1 name=\"/lib64/ld-linux-x86-64.so.2\" inode=262146 dev=ca:03 mode=0100755 ouid=0 ogid=0 rdev=00:00 nametype=NORMAL cap_fp=0000000000000000 cap_fi=0000000000000000 cap_fe=0 cap_fver=0\u001dOUID=\"root\" OGID=\"root\""
---
{
  "record_type": "PATH",
  "timestamp": 1615113648978,
  "id": 15219,
  "fields": {
    "cap_fe": "0",
    "cap_fi": [],
    "cap_fp": [],
    "cap_fver": "0",
    "dev": "ca:03",
    "inode": "262146",
    "item": "1",
    "mode": {
      "attributes": [],
      "file_type": "regular-file",
      "group": [
        "read",
        "exec"
      ],
      "other": [
        "read",
        "exec"
      ],
      "user": [
        "read",
        "write",
        "exec"
      ]
    },
    "name": "/lib64/ld-linux-x86-64.so.2",
    "nametype": "NORMAL",
    "ogid": "root",
    "ouid": "root",
    "rdev": "00:00"
  },
  "enrichment": {
    "OGID": "root",
    "OUID": "root"
  }
}
